@@ -106,18 +106,12 @@ subtest 'expected_unaligned_files' => sub {
       diag explain \@observed;
 };
 
-
 subtest '1:1 is_s3_releasable when accept_undef_qc_outcome: undef and seqqc is undef' => sub {
-  plan tests => 4;
+  plan tests => 4; 
   my $lane_qc_rs = $qc->resultset('MqcOutcomeEnt');
   $lane_qc_rs->delete;#seqqc is undef
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>3});#libqc is final accepted
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/archive_on",
@@ -150,11 +144,6 @@ subtest '1:2 is_s3_releasable when accept_undef_qc_outcome: undef and seq_qc not
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>3});#libqc is final accepted
 
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
-
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/archive_on",
          runfolder_path => $runfolder_path,
@@ -170,10 +159,7 @@ subtest '1:2 is_s3_releasable when accept_undef_qc_outcome: undef and seq_qc not
   is($archiver->accept_undef_qc_outcome($product,'s3'),undef,'accept_undef_qc_outcome is set to false');
   throws_ok{$archiver->has_qc_for_release($product)} qr/Product $name, $rpt are not all Final seq QC values/, 'throws error when accept_undef_qc_outcome is false and seq_qc is not final for has_qc_for_release';
   throws_ok{$archiver->is_s3_releasable($product)} qr/Product $name, $rpt are not all Final seq QC values/, 'throws error when accept_undef_qc_outcome is false and seq_qc is not final for is_s3_releasable';
-
 };
-
-
 
 subtest '1:3 is_s3_releasable when accept_undef_qc_outcome: undef, seq_qc outcome: final rejected' => sub {
   plan tests => 4;
@@ -181,11 +167,6 @@ subtest '1:3 is_s3_releasable when accept_undef_qc_outcome: undef, seq_qc outcom
   $lane_qc_rs->update({id_mqc_outcome=>4});#seqqc is final rejected
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>4});#libqc is final rejected
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/archive_on",
@@ -202,7 +183,6 @@ subtest '1:3 is_s3_releasable when accept_undef_qc_outcome: undef, seq_qc outcom
   is($archiver->accept_undef_qc_outcome($product,'s3'),undef,'accept_undef_qc_outcome is set to false');
   is($archiver->has_qc_for_release($product),0,'has_qc_for_release returns 0 when seq_qc outcome is final rejected');
   is($archiver->is_s3_releasable($product),0,'is_s3_releasable returns 0 when qc_outcome_matters is set to true and seq_qc is final rejected');
-
 };
 
 subtest '1:4 has_qc_for_release when accept_undef_qc_outcome: undef, seq_qc outcome: final accepted, lib_qc outcome: undef' => sub {
@@ -211,11 +191,6 @@ subtest '1:4 has_qc_for_release when accept_undef_qc_outcome: undef, seq_qc outc
   $lane_qc_rs->update({id_mqc_outcome=>3});#seqqc is final accepted
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->delete;#libqc is undef
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/archive_on",
@@ -231,7 +206,6 @@ subtest '1:4 has_qc_for_release when accept_undef_qc_outcome: undef, seq_qc outc
   is($archiver->qc_outcome_matters($product,'s3'),1,'qc_outcome_matters is set to true');
   is($archiver->accept_undef_qc_outcome($product,'s3'),undef,'accept_undef_qc_outcome is set to false');
   throws_ok{$archiver->has_qc_for_release($product)} qr/lib QC is undefined/, 'throws error when accept_undef_qc_outcome is false and seq_qc is final accepted and lib_qc is undef for has_qc_for_release';
-
 };
 
 #resetting fixture after deletion
@@ -246,11 +220,6 @@ subtest '1:5 is_s3_releasable when accept_undef_qc_outcome: undef, seq_qc outcom
   $lane_qc_rs->update({id_mqc_outcome=>3});#seqqc is final accepted
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>1});#libqc is not final
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/archive_on",
@@ -269,19 +238,12 @@ subtest '1:5 is_s3_releasable when accept_undef_qc_outcome: undef, seq_qc outcom
   throws_ok{$archiver->is_s3_releasable($product)} qr/Product $name, $rpt is not Final lib QC value/, 'throws error when accept_undef_qc_outcome is false and seq_qc is final accepted and lib_qc is not final for is_s3_releasable';
 };
 
-
-
 subtest '1:6 is_s3_releasable when accept_undef_qc_outcome: undef, seq_qc outcome: final accepted, lib_qc outcome: final undecided' => sub {
   plan tests => 4;
   my $lane_qc_rs = $qc->resultset('MqcOutcomeEnt');
   $lane_qc_rs->update({id_mqc_outcome=>3});#seqqc is final accepted
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>6});#libqc is final undecided
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/archive_on",
@@ -300,18 +262,12 @@ subtest '1:6 is_s3_releasable when accept_undef_qc_outcome: undef, seq_qc outcom
   is($archiver->is_s3_releasable($product),0,'is_s3_releasable returns 0 when seq_qc is final accepted and lib_qc is final undecided');
 };
 
-
 subtest '1:7 is_s3_releasable when accept_undef_qc_outcome: undef, seq_qc outcome: final accepted, lib_qc outcome: final rejected' => sub {
   plan tests => 4;
   my $lane_qc_rs = $qc->resultset('MqcOutcomeEnt');
   $lane_qc_rs->update({id_mqc_outcome=>3});#seqqc is final accepted
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>4});#libqqc is final rejected
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/archive_on",
@@ -369,11 +325,6 @@ subtest '2:1 is_s3_releasable when accept_undef_qc_outcome: true and seq_qc is u
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>3});#libqc is final accepted
 
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
-
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/undef_qc_accept",
          runfolder_path => $runfolder_path,
@@ -403,11 +354,6 @@ subtest '2:2 is_s3_releasable when accept_undef_qc_outcome: true and seq_qc not 
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>3});#libqc is final accepted
 
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
-
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/undef_qc_accept",
          runfolder_path => $runfolder_path,
@@ -423,10 +369,7 @@ subtest '2:2 is_s3_releasable when accept_undef_qc_outcome: true and seq_qc not 
   is($archiver->accept_undef_qc_outcome($product,'s3'),1,'accept_undef_qc_outcome is set to true');
   throws_ok{$archiver->has_qc_for_release($product)} qr/Product $name, $rpt are not all Final seq QC values/, 'throws error when accept_undef_qc_outcome is true and seq_qc is not final for has_qc_for_release';
   throws_ok{$archiver->is_s3_releasable($product)} qr/Product $name, $rpt are not all Final seq QC values/, 'throws error when accept_undef_qc_outcome is true and seq_qc is not final for is_s3_releasable';
-
 };
-
-
 
 subtest '2:3 is_s3_releasable when accept_undef_qc_outcome: true, seq_qc outcome: final rejected' => sub {
   plan tests => 4;
@@ -455,7 +398,6 @@ subtest '2:3 is_s3_releasable when accept_undef_qc_outcome: true, seq_qc outcome
   is($archiver->accept_undef_qc_outcome($product,'s3'),1,'accept_undef_qc_outcome is set to true');
   is($archiver->has_qc_for_release($product),0,'has_qc_for_release returns 0 when seq_qc outcome is final rejected');
   is($archiver->is_s3_releasable($product),0,'is_s3_releasable returns 0 when qc_outcome_matters is set to true and seq_qc is final rejected');
-
 };
 
 subtest '2:4 has_qc_for_release when accept_undef_qc_outcome: true, seq_qc outcome: final accepted, lib_qc outcome: undef' => sub {
@@ -464,11 +406,6 @@ subtest '2:4 has_qc_for_release when accept_undef_qc_outcome: true, seq_qc outco
   $lane_qc_rs->update({id_mqc_outcome=>3});#seqqc is final accepted
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->delete;#libqc is undef
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/undef_qc_accept",
@@ -485,7 +422,6 @@ subtest '2:4 has_qc_for_release when accept_undef_qc_outcome: true, seq_qc outco
   is($archiver->accept_undef_qc_outcome($product,'s3'),1,'accept_undef_qc_outcome is set to true');
   throws_ok{$archiver->has_qc_for_release($product)} qr/lib QC is undefined/, 'throws error when accept_undef_qc_outcome is true and seq_qc is final accepted and lib_qc is undef for has_qc_for_release';
 throws_ok{$archiver->is_s3_releasable($product)} qr/lib QC is undefined/, 'throws error when accept_undef_qc_outcome is true and seq_qc is final accepted and lib_qc is undef for has_qc_for_release';
-
 };
 
 #resetting fixture after deletion
@@ -500,11 +436,6 @@ subtest '2:5 is_s3_releasable when accept_undef_qc_outcome: true, seq_qc outcome
   $lane_qc_rs->update({id_mqc_outcome=>3});#seqqc is final accepted
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>1});#libqc is not final
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/undef_qc_accept",
@@ -522,7 +453,6 @@ subtest '2:5 is_s3_releasable when accept_undef_qc_outcome: true, seq_qc outcome
   throws_ok{$archiver->has_qc_for_release($product)} qr/Product $name, $rpt is not Final lib QC value/, 'throws error when accept_undef_qc_outcome is true and seq_qc is final accepted and lib_qc is not final for has_qc_for_release';
   throws_ok{$archiver->is_s3_releasable($product)} qr/Product $name, $rpt is not Final lib QC value/, 'throws error when accept_undef_qc_outcome is true and seq_qc is final accepted and lib_qc is not final for is_s3_releasable';
 };
-
 
 # should return 1
 subtest '2:6 is_s3_releasable when accept_undef_qc_outcome: true, seq_qc outcome: final accepted, lib_qc outcome: final undecided' => sub {
@@ -554,18 +484,12 @@ subtest '2:6 is_s3_releasable when accept_undef_qc_outcome: true, seq_qc outcome
   is($archiver->is_s3_releasable($product),1,'is_s3_releasable returns 1 when seq_qc is final accepted and lib_qc is final undecided');
 };
 
-
 subtest '2:7 is_s3_releasable when accept_undef_qc_outcome: true, seq_qc outcome: final accepted, lib_qc outcome: final rejected' => sub {
   plan tests => 4;
   my $lane_qc_rs = $qc->resultset('MqcOutcomeEnt');
   $lane_qc_rs->update({id_mqc_outcome=>3});#seqqc is final accepted
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>4});#libqc is final rejected
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/undef_qc_accept",
@@ -590,11 +514,6 @@ subtest '2:8 is_s3_releasable when accept_undef_qc_outcome: true, seq_qc outcome
   $lane_qc_rs->update({id_mqc_outcome=>3});#seqqc is final accepted
   my $libqc_rs = $qc->resultset('MqcLibraryOutcomeEnt');
   $libqc_rs->update({id_mqc_outcome=>3});#libqc is final accepted
-
-  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
-      't/data/novaseq/180709_A00538_0010_BH3FCMDRXX/' .
-      'Data/Intensities/BAM_basecalls_20180805-013153/' .
-      'metadata_cache_26291/samplesheet_no_align_26291.csv';
 
   my $archiver = $cls->new_object
         (conf_path      => "t/data/release/config/undef_qc_accept",
